Specify cookies should be sent in a cross-site context

--- a/netlify.toml
+++ b/netlify.toml
@@ -17,3 +17,10 @@
 from = "/"
 to = "/endsars"
 status = 302
+
+[[headers]]
+  for = "/endsars"
+  [headers.values]
+    Set-Cookie = '''
+    SameSite=None,
+    Secure'''
